<resources>
    <string name="app_name">Epicenter</string>

    <string name="app_add">Add</string>

    <string name="app_notifications">Notifications</string>
    <string name="app_search">Search</string>
    <string name="app_map">Map</string>
    <string name="app_feed">List</string>

    <string name="app_place_current_location">Current location</string>
    <string name="app_place_world">World</string>

    <string name="app_refresh">Refresh</string>
    <string name="app_sort">Sort</string>
    <string name="app_filter">Filters</string>
    <string name="app_settings">Settings</string>
    <string name="app_action_retry">Retry</string>
    <string name="app_action_grant_permission">Grant permission</string>
    <string name="app_action_enable_location">Enable location</string>
    <string name="app_action_undo">Undo</string>
    <string name="app_action_hide_filters">Hide filters</string>
    <string name="app_action_show_filters">Show filters</string>

    <string name="app_miles_abbreviation">mi</string>
    <string name="app_format_miles">%d mi</string>
    <string name="app_format_miles_real">%f mi</string>
    <string name="app_format_miles_str">%s mi</string>
    <string name="app_kilometers_abbreviation">km</string>
    <string name="app_format_kilometers">%d km</string>
    <string name="app_format_kilometers_real">%f km</string>
    <string name="app_format_kilometers_str">%s km</string>
    <string name="app_not_available_abbreviation">n/a</string>

    <string name="app_today">Today</string>
    <string name="app_yesterday">Yesterday</string>

    <string name="app_error_no_events">No events found</string>
    <string name="app_error_no_events_capt">Try another filters.</string>
    <string name="app_error_no_connection">No network connection</string>
    <string name="app_error_no_connection_capt">Check your WiFi or cellular network.</string>
    <string name="app_error_unknown">Ooops… Something went wrong</string>
    <string name="app_error_unknown_capt">Can\'t connect to the server.</string>


    <string name="feed_filters_location">Location</string>
    <string name="feed_filters_edit_locations">Edit locations</string>
    <string name="feed_filters_magnitude">Magnitude</string>
    <string name="feed_filters_chip_mag_0">0+</string>
    <string name="feed_filters_chip_mag_2">2.0+</string>
    <string name="feed_filters_chip_mag_4">4.0+</string>
    <string name="feed_filters_chip_mag_6">6.0+</string>
    <string name="feed_filters_chip_mag_8">8.0+</string>
    <string name="feed_filters_sort_by">Sort by</string>
    <string name="feed_filters_chip_sorting_data">Date</string>
    <string name="feed_filters_chip_sorting_mag">Magnitude</string>
    <string name="feed_filters_chip_sorting_mag_asc">Magnitude asc</string>
    <string name="feed_filters_chip_sorting_mag_desc">Magnitude desc</string>
    <string name="feed_filters_chip_sorting_distance">Distance</string>
    <string name="feed_filters_radius">Radius</string>

    <string name="feed_event_distance">Distance: %1$s</string>
    <string name="feed_event_depth">Depth: %1$s</string>

    <string name="feed_edit_places">Edit places</string>
    <string name="feed_edit_places_desc">Add new or edit existing places</string>
    <string name="feed_place_infinite">Infinite</string>

    <string name="feed_error_no_location_permission">No location permission</string>
    <string name="feed_error_no_location_permission_capt">This feature requires permission to access the device location. Your location data never leaves your device and is used to find events near you.</string>
    <string name="feed_error_location_is_off">Location is off</string>
    <string name="feed_error_location_is_off_capt">For a better experience, turn on device location.</string>

    <string name="empty_view_connection_title">Ooops… something went wrong</string>
    <string name="empty_view_connection_body">Can\'t connect to the server</string>


    <string name="pref_general">General</string>

    <string name="pref_units">Units</string>


    <string name="details_location">Location</string>
    <string name="details_datetime">Date and time</string>
    <string name="details_depth">Depth</string>
    <string name="details_dyfi">DYFI reports</string>
    <string name="details_source_link">Source link</string>
    <string name="details_tsunami_alert">Tsunami alert</string>
    <string name="details_event_coordinates">Lat: %1$f Long: %2$f</string>
    <string name="details_event_distance">Distance to your location: %s</string>
    <string name="details_event_depth_km">%s km</string>
    <string name="details_event_depth_mi">%s mi</string>

    <plurals name="plurals_details_days_ago">
        <item quantity="zero">%d days ago</item>
        <item quantity="one">%d day ago</item>
        <item quantity="two">%d days ago</item>
        <item quantity="few">%d days ago</item>
        <item quantity="many">%d days ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>

    <string name="prefs_app_settings">APP_SETTINGS</string>
    <string name="pref_units_key" translatable="false">UNITS</string>
    <string name="pref_first_launch_key" translatable="false">FIRST_LAUNCH</string>

    <string name="pref_feed_selected_place">FEED_SELECTED_PLACE</string>
    <string name="pref_feed_min_mag">FEED_MIN_MAG</string>
    <string name="pref_feed_sort_order">FEED_SORT_ORDER</string>
    <string name="pref_feed_sort_criterion">FEED_SORT_CRITERION</string>

    <string name="pref_map_filter_min_mag">MAP_MIN_MAG</string>
    <string name="pref_map_filter_days_ago">MAP_DAYS_AGO</string>
    <string name="pref_map_camera_zoom">MAP_CAMERA_ZOOM</string>
    <string name="pref_map_cam_lat">MAP_CAMERA_LAT</string>
    <string name="pref_map_cam_lon">MAP_CAMERA_LON</string>

    <string-array name="pref_units_entries">
        <item>Auto</item>
        <item>Metric (kilometers)</item>
        <item>Imperial (miles)</item>
    </string-array>

    <string-array name="pref_units_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="map_map">Map</string>
    <string name="map_filters_magnitude">Magnitude</string>
    <string name="map_filters_date">Date</string>
    <string name="map_filters_7_days">7 days</string>
    <string name="map_filters_1_day">1 day</string>
    <string name="map_filters_4_days">4 days</string>
    <string name="map_format_marker_title">%s %s</string>

    <string name="places_title">Places manager</string>
    <string name="places_infinite">Infinity</string>
    <string name="places_radius_dash">-</string>
    <string name="place_editor_radius">Radius</string>

    <plurals name="plurals_places_deleted">
        <item quantity="zero">%d places deleted</item>
        <item quantity="one">%d place deleted</item>
        <item quantity="two">%d places deleted</item>
        <item quantity="few">%d places deleted</item>
        <item quantity="many">%d places deleted</item>
        <item quantity="other">%d places deleted</item>
    </plurals>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="place_name_picker_place_name">Place name</string>
    <string name="place_name_picker_error_empty_name">Enter place name</string>
    <string name="places_manager_place_deleted">Place deleted</string>
    <string name="app_undo">Undo</string>

    <string name="place_editor_tap_to_select">Tap anywhere to select a place</string>
    <string name="place_editor_hint_move_map">Move the map to select the desired place</string>
</resources>
