<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorSurface">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <fragment
                android:id="@+id/detailsMap"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                app:liteMode="true" />

            <LinearLayout
                android:id="@+id/magnitudeContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/spacing_2x"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/magnitudeValueTv"
                    style="@style/TextAppearance.MaterialComponents.Headline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="4.6"
                    tools:textColor="@color/colorAlert4" />

                <TextView
                    android:id="@+id/magnitudeTypeTv"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_05x"
                    android:textColor="@color/colorAlert4"
                    tools:text="mb" />
            </LinearLayout>

            <TextView
                android:id="@+id/titleTv"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_2x"
                android:layout_marginTop="@dimen/spacing_05x"
                android:layout_marginEnd="@dimen/spacing_2x"
                tools:text="257km W of Ferndale, California" />

            <TextView
                android:id="@+id/tsunamiAlertTv"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_2x"
                android:layout_marginTop="@dimen/spacing_05x"
                android:drawableStart="@drawable/ic_waves_blue_24px"
                android:drawablePadding="@dimen/spacing_1x"
                android:text="@string/details_tsunami_alert"
                android:textColor="@color/colorTsunami" />

            <me.alex.pet.apps.epicenter.presentation.common.views.TileTwolineView
                android:id="@+id/locationTile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_location_24dp"
                app:title="@string/details_location"
                tools:textFirstLine="Lat: -127.3093, Lon: 40.5524"
                tools:textSecondLine="Distance from you 1125mi" />

            <me.alex.pet.apps.epicenter.presentation.common.views.TileTwolineView
                android:id="@+id/dateTimeTile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_datetime_white_24px"
                app:title="@string/details_datetime"
                tools:textFirstLine="03/30/2019 at 12:34 pm"
                tools:textSecondLine="2 days ago" />

            <me.alex.pet.apps.epicenter.presentation.common.views.TileView
                android:id="@+id/depthTile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_depth_white_24px"
                app:title="@string/details_depth"
                tools:text="15 km" />

            <me.alex.pet.apps.epicenter.presentation.common.views.TileView
                android:id="@+id/feltReportsTile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_dyfi_white_24px"
                app:title="@string/details_dyfi"
                tools:text="4" />

            <me.alex.pet.apps.epicenter.presentation.common.views.TileView
                android:id="@+id/sourceLinkTile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_2x"
                app:icon="@drawable/ic_open_link_white_24px"
                app:title="@string/details_source_link"
                tools:text="http://usgs.gov" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorSurface"
        android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar.Surface">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
            app:titleEnabled="false"
            app:toolbarId="@id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>